data/derived/comb/progs/unify/prog3402.ml.out
Characters 114-122:
  let seen' = if (!List.mem h seen) then (h :: seen) in
                   ^^^^^^^^
Error: This expression has type 'a -> 'a list -> bool
       but an expression was expected of type 'b ref
